added tests for hw10a